--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-chartjs-2": "^5.2.0",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
     "web-vitals": "^2.1.4"
